# wis2downloader

./: pyproject.toml
docker/tests/containers/minio/: docker-compose-minio.yml
docker/tests/containers/minio/config/: entrypoint.sh  init_minio.sh  lifecycle_deletion.json.template
wis2downloader/: metrics.py
wis2downloader/downloader/: __init__.py  storage.py
wis2downloader/subscriber/: __init__.py
wis2downloader/wis_queue/: __init__.py
