[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "wis2downloader"
version = "0.1.0"
description = "Python package to manage subscriptions and downloads from the WIS2.0"
authors = ["Rory Burke"]
maintainers = ["Rory Burke", "David I. Berry <dberry@wmo.int>"]
readme = "README.md"
keywords = ["WIS2.0", "MQTT", "subscribe", "download"]
homepage = "https://mfi.fr"

[tool.poetry.dependencies]
python = ">=3.9"
certifi = ">=2024.2.2"
flask = ">=3.0.3"
flask-cors = ">=4.0.0"
paho-mqtt = ">=2.0.0"
prometheus_client = ">=0.20.0"
pywis-topics = ">=0.3.2"
tenacity = "^9.0.0"
minio = "^7.2.10"

[tool.poetry.scripts]
wis2downloader = "wis2downloader:cli.cli"